--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": ">=7.0.0",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "dingo/api": "v2.0.0-alpha1",
+        "tymon/jwt-auth": "1.0.0-rc.1"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "v2.4.1",
